--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,9 @@
 # Items to ignore when downloading a zip
 .gitattributes export-ignore
+.gitignore export-ignore
 .github export-ignore
 composer.json export-ignore
 composer.lock export-ignore
 pmpro-local-pricing-banner.jpg export-ignore
 README.md export-ignore
+/vendor/ export-ignore
